#64. Emmas carousel: Fixed indicators' z-index.

--- a/emma/static/styl/landing/home.styl
+++ b/emma/static/styl/landing/home.styl
@@ -469,6 +469,7 @@
   .carousel-indicators
     bottom remify(-15)
     transform translateY(100%)
+    z-index 2
 
     li
       box-sizing border-box
